--- a/main.css
+++ b/main.css
@@ -14,17 +14,19 @@ body {
 	background-image: url(imagens/azul.jpg);
 }
 .titulo {
-	font-size: 50px;
+	font-size: 55px;
 	color: black;
 	padding-bottom: 10px;
 	text-align: center;
-
+	font-family: Courier;
+	color: #ffffff;
+	font-weight: bold;
 }
 .navegacao {
-	font-size: 18px;
+	font-size: 20px;
 	display: inline-block;
 	margin-right: auto;
-	margin-left: 210px;
+	margin-left: 140px;
 }
 .navegacao .link {
 	position: center;
@@ -32,16 +34,20 @@ body {
 	display: inline-block;
 	padding: 10px;
 	padding-bottom: 5px;
-	position: center;
+	font-family: Courier;
+	font-weight: bold;
 }
 .navegacao a{
 	text-decoration: none;
 	color: black;
 	text-align: center;
+	color: #ffffff;
+	font-family: Courier;
+	font-weight: bold;
 }
 .navegacao .link:hover {
 	color:#F7F8FF;
-	background-color: white;
+	background-color: #32CD32;
 	display: inline-block;
 	padding: 10px;
 	padding-bottom: 5px;
