--- a/main.css
+++ b/main.css
@@ -116,7 +116,7 @@ footer .rodape {
 	font-family: arial;
 }
 .Hora {
-	position: absolute;
+	display: inline;
 	top: 7%;
 	left: 71%;
 	font: 20px Courier;
