--- a/main.css
+++ b/main.css
@@ -11,7 +11,6 @@ body {
 	margin-right: auto;
 	display: block; 
 	height:auto;
-	background-image: url(imagens/azul.jpg);
 }
 .titulo {
 	font-size: 55px;
@@ -64,7 +63,7 @@ body {
 	padding-bottom: 10px;
 	display: block; 
 	height:auto;
-	background-image: url(imagens/azul.jpg);
+
 }
 .corpo {
 	width: 760px;
@@ -93,7 +92,7 @@ footer {
 	margin-right: auto;
 	display: block; 
 	height:auto;
-	background-image: url(imagens/azul.jpg);
+
 	text-align: center;
 	margin-bottom: 30px;
 }
@@ -122,4 +121,15 @@ footer .rodape {
 	padding-bottom: 20px;
 	font: 25px Courier;
 	color: #ffffff;
+}
+.corpo_todo {
+	background-image: url(imagens/azul.jpg);
+	margin-top: 30px;
+	border-radius: 10px 10px 10px 10px;
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block; 
+	height:auto;
+
 }
