--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body {
 	font-family: Courier;
 	color: #ffffff;
 	font-weight: bold;
+	text-shadow: 0px 0px 7px #474747;
 }
 .navegacao {
 	font-size: 20px;
@@ -30,7 +31,6 @@ body {
 }
 .navegacao .link {
 	position: center;
-	color: black;
 	display: inline-block;
 	padding: 10px;
 	padding-bottom: 5px;
@@ -39,9 +39,9 @@ body {
 }
 .navegacao a{
 	text-decoration: none;
-	color: black;
 	text-align: center;
 	color: #ffffff;
+	text-shadow: 0px 0px 7px #474747;
 	font-family: Courier;
 	font-weight: bold;
 }
@@ -121,6 +121,7 @@ footer .rodape {
 	padding-bottom: 20px;
 	font: 25px Courier;
 	color: #ffffff;
+	text-shadow: 0px 0px 7px #474747;
 }
 .corpo_todo {
 	background-image: url(imagens/azul.jpg);
