--- a/produtos.css
+++ b/produtos.css
@@ -41,3 +41,8 @@
 	padding-right: 80px;
 	max-width: 300px;
 }
+.corpo a {
+	text-decoration: none;
+	font-family: Arial, Helvetica, sans-serif;
+	color: #228B22;
+}
