--- a/main.css
+++ b/main.css
@@ -134,3 +134,13 @@ footer .rodape {
 	height:auto;
 
 }
+.texto_principal {
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	text-align: center;
+	padding-bottom: 40px;
+	font-size: 20px;
+}
+.texto_principal a {
+	color: #228B22;
+}
