--- a/produtos.css
+++ b/produtos.css
@@ -32,6 +32,7 @@
 	text-align: right;
 	font-style: italic;
 	font-family: Arial, Helvetica, sans-serif;
+	padding-right: 10px;
 }
 .foto_produto {
 	margin-left: 30px;
